src/test/ui/issues/60000-69999/issue-60075.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `}`
  --> $DIR/issue-60075.rs:6:10
   |
LL |         });
   |          ^ expected one of `.`, `;`, `?`, `else`, or an operator

error: non-item in item list
  --> $DIR/issue-60075.rs:6:11
   |
LL | trait T {
   |         - item list starts here
...
LL |         });
   |           ^ non-item starts here
...
LL |     }
   |     - item list ends here

error: mismatched closing delimiter: `)`
  --> $DIR/issue-60075.rs:6:10
   |
LL |     fn qux() -> Option<usize> {
   |                               - unclosed delimiter
LL |         let _ = if true {
LL |         });
   |          ^ mismatched closing delimiter

error: aborting due to 3 previous errors

